2016-09-29 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PCDebugger.h
	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	* Modules/Debuggers/ProjectCenter/PCDebuggerViewDelegateProtocol.h
	* Modules/Debuggers/ProjectCenter/PipeDelegate.m
	Add skeleton to handle breakpoints, add breakpoint types.

2016-06-06 11:47-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m: Add code to
	make commands appear when the button is pressed.

2016-05-22 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/PCEditorView.h
	* Modules/Editors/ProjectCenter/PCEditorView.m
	Comply to protocol.

	* Modules/Editors/ProjectCenter/SyntaxHighlighter.h
	* Modules/Editors/ProjectCenter/SyntaxHighlighter.m
	Transition to NSInteger/NSUInteger

2016-05-15 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	On windows kill with DebugBreakProcess() and not tskill. Available only on WinXP or higher.

	* Modules/Debuggers/ProjectCenter/PipeDelegate.m
	For GDB < v. 7 (on win), attempt to grab process id from Windows thread information.

2016-05-05 15:43-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Minor changes.

2016-05-05 13:13-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Partial parsing
	of result records to yield correct status in debuggerView.

2016-05-05 11:23-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Handle more
	escaped sequences to futher clean up output.

2016-05-03 19:40-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PipeDelegate.h
	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Add parsers
	to handle output from various types of MI data.  Code to handle
	each individual case is being written.
